Fix vertical alignment of carousel navigation arrows.
Navigation arrows were aligned to the top of page. Vertically centered them in this fix.

--- a/examples/carousel/carousel.css
+++ b/examples/carousel/carousel.css
@@ -18,6 +18,12 @@ body {
   z-index: 15;
 }
 
+/* Vertically aligns left and right chevrons. */
+.carousel-control > .glyphicon-chevron-left, .carousel-control > .glyphicon-chevron-right {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+}
 
 
 /* CUSTOMIZE THE CAROUSEL
